--- a/src/blocks/footer.astro
+++ b/src/blocks/footer.astro
@@ -15,6 +15,7 @@ const { name } = Astro.props;
 
       <div class="col-md-6 col-acciones-footer d-flex justify-content-center align-items-center">
         <ul>
+          <li><a href="#" data-evento="Cuenta-regresiva" class="confirmar-asistencia">Confirmar asistencia a fiesta</a></li>
           <li><a href="#" data-evento="Fiesta" class="confirmar-asistencia">Confirmar asistencia a fiesta</a></li>
           <!-- <li><a href="#" class="sugerir-cancion">Sugerir canción</a></li> -->
           <li>
