--- a/src/modals/asistencia.modal.astro
+++ b/src/modals/asistencia.modal.astro
@@ -6,16 +6,16 @@
       <div class="modal-content-2">
 
         <picture>
-          <source type="image/webp" srcset="https://fixdate.io/modelo-invitacion/54/img/flores_Grupo04_A.webp">
-          <source type="image/png" srcset="https://fixdate.io/modelo-invitacion/54/img/flores_Grupo04_A.png">
-          <img class="adorno adorno-1 aos-init aos-animate" data-aos="fade-right" data-aos-delay="300" data-aos-duration="1000" data-aos-once="false" src="https://fixdate.io/modelo-invitacion/54/img/flores_Grupo04_A.png" alt="" loading="lazy">
+          <source type="image/webp" srcset="/flores_Grupo04_A.webp">
+          <source type="image/png" srcset="/flores_Grupo04_A.png">
+          <img class="adorno adorno-1 aos-init aos-animate" data-aos="fade-right" data-aos-delay="300" data-aos-duration="1000" data-aos-once="false" src="/flores_Grupo04_A.png" alt="" loading="lazy">
         </picture>
 
 
         <picture>
-          <source type="image/webp" srcset="https://fixdate.io/modelo-invitacion/54/img/flores_Grupo04_B.webp">
-          <source type="image/png" srcset="https://fixdate.io/modelo-invitacion/54/img/flores_Grupo04_B.png">
-          <img class="adorno adorno-2 aos-init aos-animate" data-aos="fade-right" data-aos-delay="400" data-aos-duration="1000" data-aos-once="false" src="https://fixdate.io/modelo-invitacion/54/img/flores_Grupo04_B.png" alt="" loading="lazy">
+          <source type="image/webp" srcset="/flores_Grupo04_B.webp">
+          <source type="image/png" srcset="/flores_Grupo04_B.png">
+          <img class="adorno adorno-2 aos-init aos-animate" data-aos="fade-right" data-aos-delay="400" data-aos-duration="1000" data-aos-once="false" src="/flores_Grupo04_B.png" alt="" loading="lazy">
         </picture>
 
         <div class="img-top-modal d-flex justify-content-center align-items-start">
@@ -25,7 +25,7 @@
           </button>
 
           <div class="white-circle-icon">
-            <img class="" src="https://fixdate.io/modelo-invitacion/54/img/img_circuloCeremonia.svg" alt="">
+            <img class="" src="/img_circuloCeremonia.svg" alt="">
           </div>
 
         </div>
