--- a/src/blocks/regalos.astro
+++ b/src/blocks/regalos.astro
@@ -3,7 +3,7 @@
 ---
 
 <section class="regalos">
-  <picture>
+  <!-- <picture>
     <source type="image/webp" srcset="/flores_Grupo02_A.webp">
     <source type="image/png" srcset="/flores_Grupo02_A.png">
     <img class="adorno adorno-1 aos-init aos-animate" data-aos="fade-right" data-aos-delay="300" data-aos-duration="1000" data-aos-once="false" src="/flores_Grupo02_A.webp" alt="" loading="lazy">
@@ -21,7 +21,7 @@
     <source type="image/webp" srcset="/flores_Grupo02_C.webp">
     <source type="image/png" srcset="/flores_Grupo02_C.png">
     <img class="adorno adorno-3 aos-init aos-animate" data-aos="fade-right" data-aos-delay="500" data-aos-duration="1000" data-aos-once="false" src="/flores_Grupo02_C.webp" alt="" loading="lazy">
-  </picture>
+  </picture> -->
 
 
   <div class="container">
