--- a/src/blocks/footer.astro
+++ b/src/blocks/footer.astro
@@ -15,18 +15,11 @@ const { name } = Astro.props;
 
       <div class="col-md-6 col-acciones-footer d-flex justify-content-center align-items-center">
         <ul>
-          <li><a href="#" data-evento="Cuenta-regresiva" class="confirmar-asistencia">Confirmar asistencia a fiesta</a></li>
-          <li><a href="#" data-evento="Fiesta" class="confirmar-asistencia">Confirmar asistencia a fiesta</a></li>
-          <!-- <li><a href="#" class="sugerir-cancion">Sugerir canción</a></li> -->
-          <li>
-            <!-- <div title="" class="addeventatc" id="addeventatc2" aria-haspopup="true" aria-expanded="false" tabindex="0" translate="no" data-loaded="true" style="visibility: visible;">
-              <span class="nameBtn atc_node notranslate">Agendar Fiesta</span>
-              <span class="start atc_node notranslate">2026-03-02 19:17:31</span>
-              <span class="end atc_node notranslate">2026-03-02 19:17:31</span>
-              <span class="timezone atc_node notranslate">America/Argentina/Buenos_Aires</span>
-              <span class="title atc_node notranslate">Florencia ::: Mis 15 años :::  (Fiesta)</span>
-            </div> -->
-          </li>
+          <li><a href="#cuenta-regresiva" data-evento="" class="">Cuenta regresiva</a></li>
+          <li><a href="#informacion-fiesta" data-evento="" class="">Información</a></li>
+          <li><a href="#confirmar-asistencia" data-evento="" class="">Confirmar asistencia a fiesta</a></li>
+          <li><a href="#direccion" data-evento="" class="">Dirección</a></li>
+          <li><a href="#regalos" data-evento="" class="">Regalos</a></li>
         </ul>
       </div>
     </div>
