--- a/src/blocks/regalos.astro
+++ b/src/blocks/regalos.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<section class="regalos">
+<section class="regalos" id="regalos">
   <!-- <picture>
     <source type="image/webp" srcset="/flores_Grupo02_A.webp">
     <source type="image/png" srcset="/flores_Grupo02_A.png">
