--- a/src/blocks/cuenta-regresiva.astro
+++ b/src/blocks/cuenta-regresiva.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<section class="cuenta-regresiva">
+<section class="cuenta-regresiva" id="cuenta-regresiva">
   <div class="container">
     <div class="row d-flex justify-content-center align-items-center">
       <div class="box-aros d-flex justify-content-center align-items-center">
