--- a/src/blocks/fiesta.astro
+++ b/src/blocks/fiesta.astro
@@ -27,7 +27,7 @@
                         <div class="anim-musica"></div>
                     </div>
                     <p>¿Cuál es la canción que no debe faltar en la PlayList de la fiesta?</p>
-                    <a href="#" class="boton sugerir-cancion">Sugerir canción</a>
+                    <a href="#" class="boton boton--azul sugerir-cancion">Sugerir canción</a>
                 </div>
             </div>
 
@@ -39,7 +39,7 @@
                         <div class="anim-vestuario"></div>
                     </div>
                     <p>Una orientación para <br /> tu vestuario</p>
-                    <a href="#" class="boton modal-vestuario"> Ver más </a>
+                    <a href="#" class="boton boton--azul modal-vestuario"> Ver más </a>
                 </div>
             </div>
 
@@ -51,7 +51,7 @@
                         <div class="anim-tips"></div>
                     </div>
                     <p>Información adicional <br /> para tener en cuenta</p>
-                    <a href="#" class="boton modal-tips"> + Info </a>
+                    <a href="#" class="boton boton--azul modal-tips"> + Info </a>
                 </div>
             </div>
         </div>
