--- a/src/components/fondo-musica.astro
+++ b/src/components/fondo-musica.astro
@@ -17,8 +17,8 @@ const { name } = Astro.props;
         <span>La música de fondo es parte de la experiencia</span>
 
         <br>
-        <a class="boton" id="play-music-modal" href="">Ingresar con música</a>
-        <a class="boton" data-dismiss="modal" aria-label="Close" id="" href="">Ingresar sin música</a>
+        <a class="boton boton--azul" id="play-music-modal" href="">Ingresar con música</a>
+        <a class="boton boton--azul" data-dismiss="modal" aria-label="Close" id="" href="">Ingresar sin música</a>
       </div>
 
     </div>
