--- a/src/modals/mapa.modal.astro
+++ b/src/modals/mapa.modal.astro
@@ -41,7 +41,7 @@
       </div>
 
         <div class="modal-footer">
-          <a class="boton ampliar-mapa" target="_blank" href="https://www.google.com/maps/search/?api=1&amp;query=-34.6201481,-58.4046887">Ampliar mapa</a>
+          <a class="boton boton--azul ampliar-mapa" target="_blank" href="https://www.google.com/maps/search/?api=1&amp;query=-34.6201481,-58.4046887">Ampliar mapa</a>
         </div>
 
       </div>
