--- a/src/blocks/instagram.astro
+++ b/src/blocks/instagram.astro
@@ -19,7 +19,7 @@ const { hashtag } = Astro.props;
         </div>
         <br>
 
-        <a target="_blank" href="https://www.instagram.com/" class="boton">Ver en Instagram</a>
+        <a target="_blank" href="https://www.instagram.com/" class="boton boton--azul">Ver en Instagram</a>
     </div>
   </div>
 </section>
