--- a/src/modals/sugerirCancion.modal.astro
+++ b/src/modals/sugerirCancion.modal.astro
@@ -69,7 +69,7 @@
         </div>
 
         <div class="modal-footer">
-          <button type="button" id="sendSugerenciaCancion" class="boton">Sugerir canción</button>
+          <button type="button" id="sendSugerenciaCancion" class="boton boton--azul">Sugerir canción</button>
         </div>
 
       </div>
